# TaskerAI

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  main.py  model.py  telegram_app.py
app/backend/: calendar.py  model.py  task.py  task_calendar.py  taskerai.py
app/backend/Model/: deep_seek_model.py  imodel.py  model.py  model_app.py
app/backend/database/: task_database.py
app/backend/model/: deep_seek_model.py  model.py  model_app.py  yandex_model.py
app/backend/test/: test_model.py
app/frontend/: bot.py
core_lib/: pyproject.toml
core_lib/core_lib/: global_logging_config.py
core_lib/core_lib/models/: task.py  user.py  user_shedule.py
core_lib/tests/: test_task_model.py
services/notifier/: main.py  pyproject.toml
services/notifier/app/: api.py  clients.py  config.py  models.py  services.py
services/scheduler/: pyproject.toml
services/scheduler/app/: database.py  main.py
services/task_database/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/task_database/alembic/: env.py
services/task_database/alembic/versions/: 106302684220_create_tasks_table1.py  1bcf60d1bab0_create_tasks_table1.py  bece50ec8f24_create_tasks_table1.py  f73762ad604e_create_tasks_table1.py
services/task_database/app/: main.py
services/task_database/app/core/: logging_config.py
services/task_database/app/db/: crud.py  embedding.py  mappers.py  models.py  session.py
services/task_processor/: pyproject.toml
services/task_processor/app/: main.py
services/task_processor/app/core/: logging_config.py  processor.py
services/task_processor/app/llm/: chat_model.py
services/user_database/: docker-compose.yml  pyproject.toml
services/user_database/alembic/: env.py
services/user_database/alembic/versions/: 5a0603a3b173_create_user_table.py
services/user_database/app/: main.py
services/user_database/app/core/: config.py  logging_config.py
services/user_database/app/db/: crud.py  models.py  session.py
