[project]
name = "taskerai"
version = "0.1.0"
description = "Bot for decomposing tasks using artificial intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
