[project]
name = "task-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "dotenv>=0.9.9",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "core_lib",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "pydantic-settings>=2.10.0",
    "pytest-asyncio>=1.0.0",
    "aiosqlite>=0.21.0",
]

[tool.uv]
sources = { "core_lib" = { "path" = "../../core_lib", "editable" = true } }
