# services/task_processor/pyproject.toml
[project]
name = "task_processor"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "core_lib",
    "langchain",
    "langchain-core",
    "langchain-community", 
    "python-dotenv",      
]

[tool.uv]
sources = { "core_lib" = { "path" = "../../core_lib", "editable" = true } }
