[project]
name = "task_processor"
version = "0.1.0"
dependencies = [
    "fastapi",
    "python-dotenv",
    "uvicorn[standard]",
    # Database
    "sqlalchemy[asyncio]",
    "psycopg-binary",
    "alembic",
    "pgvector",
    # Agents
    "langchain>=0.3.26",
    "langchain-openai>=0.3.24",
    "core_lib",
    "httpx>=0.28.1",
    "aiokafka>=0.12.0",
]

[tool.uv]
sources = { "core_lib" = { "path" = "../../core_lib", "editable" = true } }
