[project]
name = "user-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "core_lib",
    "passlib>=1.7.4",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "bcrypt>=4.3.0",
]



[tool.uv]
sources = { "core_lib" = { "path" = "../../core_lib", "editable" = true } }
